Fixed application_accordeon when fields are empty or too long and fixed location slider dynamic zoom level

--- a/source/widgets/application_accordeon/application_accordeon.scss
+++ b/source/widgets/application_accordeon/application_accordeon.scss
@@ -13,6 +13,16 @@
 	}
 
 	.widg_accordeon__content {
+		dt,
+		dd {
+			border-bottom: none;
+		}
+
+		dl > div {
+			@include clearfix();
+			border-bottom: 1px solid $colorGreyHover;
+		}
+
 		p {
 			font-size: 1.25rem;
 		}
